# Side-Event-Loop

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: Event.hpp  EventLoop.hpp  EventQueue.hpp
lib/src/: CMakeLists.txt  Event.cpp  EventLoop.cpp  EventQueue.cpp
src/: CMakeLists.txt  main.cpp
